src/objects/TMSystemDetail__c.object
<CustomObject>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RunStatus__c</fullName>
        <label>Run Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <referenceTo>TMSystem__c</referenceTo>
        <relationshipLabel>TM System Details</relationshipLabel>
        <relationshipName>TMSysDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>TM System Detail</label>
    <nameField>
        <displayFormat>TMsd-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TM System Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>